tests/expectations/compiler/definition/tuple_def_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370045]: Expected an identifier.
    --> compiler-test:5:14
     |
   5 |         let (1u8+1u8,1u8+1u8): (u8,u8) = (1u8,2u8);
     |              ^"""]
